--- a/S04.03-Exercise-AddMapAndSharing/app/src/main/res/values/strings.xml
+++ b/S04.03-Exercise-AddMapAndSharing/app/src/main/res/values/strings.xml
@@ -28,6 +28,9 @@
     <string name="action_refresh">Refresh</string>
     <string name="action_open_map">Open Map</string>
 
+    <!--Used in detail menu-->
+    <string name="action_share">Share</string>
+
     <string name="error_message">
         An error has occurred. Please try again by clicking REFRESH
     </string>
